# simplex

./: Cargo.toml  README.md
.github/workflows/: release.yml
html/: index.html  main.js
html/css/: style.css
src/: main.rs
