[package]
name = "simplex"
version = "0.1.7"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"]}
hyper-util =  { version = "0.1.6", features = ["full"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"]}
walkdir = "2.5.0"
